add JVM option and modified description