@@ -24,16 +24,18 @@ public class FireLineTarget extends AbstractDescribableImpl<FireLineTarget> {
 	private final String reportPath;
 	private final String reportFileName;
 	private final String jdk;
+	private final String jvm;
 	// notScan=true, not analyze code;notScan=false,analyze code.
 	private final boolean notScan;
 
 	@DataBoundConstructor
-	public FireLineTarget(String configuration, String reportPath, String reportFileName, boolean notScan, String jdk) {
+	public FireLineTarget(String configuration, String reportPath, String reportFileName, boolean notScan, String jdk,String jvm) {
 		this.configuration = StringUtils.trim(configuration);
 		this.reportPath = StringUtils.trim(reportPath);
 		this.reportFileName = StringUtils.trim(reportFileName);
 		this.notScan = notScan;
 		this.jdk = jdk;
+		this.jvm=StringUtils.trim(jvm);
 	}
 
 	public String getConfiguration() {
@@ -54,6 +56,10 @@ public class FireLineTarget extends AbstractDescribableImpl<FireLineTarget> {
 
 	public String getJdk() {
 		return jdk != null && !jdk.isEmpty() ? jdk : "(Inherit From Job)";
+	}
+	
+	public String getJvm() {
+		return jvm!=null&&!jvm.isEmpty()?jvm:"-Xms1g -Xmx1g -XX:MaxPermSize=512m";
 	}
 
 	@Extension
@@ -96,10 +102,17 @@ public class FireLineTarget extends AbstractDescribableImpl<FireLineTarget> {
 		}
 
 		public FormValidation doCheckJdk(@QueryParameter String value) {
-			if (value.contains("1.8") || value.contains("1.7")) {
+//			if (value.contains("1.8") || value.contains("1.7")) {
 				return FormValidation.ok();
+//			}
+//			return FormValidation.error("JDK1.7 or 1.8 is compatible with FireLine.");
+		}
+		
+		public FormValidation doCheckJvm(@QueryParameter String value) {
+			if (value == null || value.length() == 0) {
+				return FormValidation.error("Please input JVM parameter.");
 			}
-			return FormValidation.error("JDK1.7 or 1.8 is compatible with FireLine.");
+			return FormValidation.ok();
 		}
 
 		public String defaultReportPath() {
